# testApps

./: .gitignore  codeconnect  compose.yml  readme.md  testApps.code-workspace
android/calculator/app/: build.gradle.kts
android/calculator/app/src/androidTest/java/ai/skydom/calculator/: ExampleInstrumentedTest.kt
android/calculator/app/src/main/java/ai/skydom/calculator/: MainActivity.kt
android/calculator/app/src/main/java/ai/skydom/calculator/ui/theme/: Color.kt  Theme.kt  Type.kt
android/calculator/app/src/test/java/ai/skydom/calculator/: ExampleUnitTest.kt
android/calculator/gradle/wrapper/: gradle-wrapper.properties
android/java/template/: settings.gradle.kts
android/java/template/app/: build.gradle.kts
android/java/template/app/src/androidTest/java/ai/skydom/rust_template/: ExampleInstrumentedTest.kt
android/java/template/app/src/main/: AndroidManifest.xml
android/java/template/app/src/main/java/ai/skydom/rust_template/: MainActivity.kt
android/java/template/app/src/main/java/ai/skydom/rust_template/ui/theme/: Color.kt  Theme.kt  Type.kt
android/java/template/app/src/main/res/values/: strings.xml  themes.xml
android/java/template/app/src/test/java/ai/skydom/rust_template/: ExampleUnitTest.kt
android/java/template/gradle/: libs.versions.toml
android/java/template/gradle/wrapper/: gradle-wrapper.properties
android/simCam/: settings.gradle.kts
android/simCam/app/: build.gradle.kts
android/simCam/app/release/: output-metadata.json
android/simCam/app/release/baselineProfiles/0/: app-release.dm
android/simCam/app/release/baselineProfiles/1/: app-release.dm
android/simCam/app/src/androidTest/java/ai/skydom/simcam/: ExampleInstrumentedTest.kt
android/simCam/app/src/main/: AndroidManifest.xml
android/simCam/app/src/main/java/ai/skydom/simcam/: MainActivity.kt
android/simCam/app/src/main/java/ai/skydom/simcam/ui/theme/: Color.kt  Theme.kt  Type.kt
android/simCam/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/simCam/app/src/main/res/layout/: activity_main.xml
android/simCam/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
android/simCam/app/src/test/java/ai/skydom/simcam/: ExampleUnitTest.kt
android/simCam/gradle/: libs.versions.toml
android/simCam/gradle/wrapper/: gradle-wrapper.properties
ios/simmath/: simmath-Bridging-Header.h
ios/simmath/simmath/: ContentView.swift  simmathApp.swift
ios/simmath/simmath.xcodeproj/: project.pbxproj
ios/simmath/simmath.xcodeproj/project.xcworkspace/xcuserdata/skydom.xcuserdatad/: UserInterfaceState.xcuserstate
ios/simmath/simmath.xcodeproj/xcuserdata/skydom.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/simmath/simmathTests/: simmathTests.swift
ios/simmath/simmathUITests/: simmathUITests.swift  simmathUITestsLaunchTests.swift
rust/simple/imageproc/: Cargo.toml
rust/simple/imageproc/src/: lib.rs
rust/simple/imageproc/src/binary/: bitmap.rs  main.rs
rust/simple/simple_math/: Cargo.toml
rust/simple/simple_math/src/: lib.rs
rust/simple/your_rust_library/: Cargo.toml
